# new-order

./: backend.sh  frontend.sh
backend/: .env  Cargo.toml
backend/migrations/: 20240827103904_init_tables.down.sql  20240827103904_init_tables.up.sql  20240827151606_mock_data.down.sql  20240827151606_mock_data.up.sql
backend/src/: error.rs  lib.rs  main.rs  session.rs
backend/src/controllers/: admin.rs  item.rs  mod.rs  order.rs
backend/src/middlewares/: mod.rs
backend/src/models/: item.rs  mod.rs  order.rs  user.rs
backend/src/routes/: admin.rs  item.rs  login.rs  mod.rs  order.rs  ping.rs
backend/tests/: ping.rs  user.rs
backend/tests/common/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: dashboard.rs  home.rs  list.rs  login.rs  main.rs  model.rs  order.rs
frontend/src/components/: list_filters.rs  mod.rs  order_card.rs
