[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"

[lib]
name = "backend"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
jwt-simple = "0.12.9"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["derive", "postgres", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["full", "macros"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.7",default_features=false, features = ["cookies", "json", "rustls-tls"] }
