[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1.7"
icondata = "0.4.0"
leptos = { version = "0.6.14", features = ["csr"] }
leptos_icons = "0.3.1"
leptos_meta = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thaw = { version = "0.3.3", features = ["csr"] }
